--- a/index.html
+++ b/index.html
@@ -270,6 +270,8 @@
                 const link = document.createElement('a');
                 link.href = imageData;
                 link.download = 'carteirinha.png';
+
+                // Clicar no link para iniciar o download
                 link.click();
             });
         }
