--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>IPRSM - Formulario Membresia</title>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/html2canvas/0.4.1/html2canvas.min.js"></script>
+    <title>IPRSM - Cadastro de Membros</title>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/html2canvas/1.4.1/html2canvas.min.js"></script>
     <style>
         body {
             font-family: 'Roboto', sans-serif;
@@ -34,7 +34,6 @@
         form {
             display: flex;
             flex-direction: column;
-            align-items: stretch;
             max-width: 700px;
             margin: auto;
             background: #1e1e1e;
@@ -55,11 +54,6 @@
             background: #333;
             font-size: 14px;
             color: #f1f1f1;
-        }
-
-        input:focus, select:focus {
-            border-color: #3498db;
-            outline: none;
         }
 
         button {
@@ -94,7 +88,7 @@
         .card {
             display: flex;
             align-items: center;
-            justify-content: flex-start;
+            flex-direction: column;
             width: 600px;
             height: 220px;
             background: #fff;
@@ -103,13 +97,11 @@
             color: #000;
             box-shadow: 0 5px 15px rgba(0, 0, 0, 0.3);
             border: 5px solid #000;
-            flex-direction: column;
         }
 
         .card-header {
             display: flex;
             align-items: center;
-            justify-content: flex-start;
             width: 100%;
             margin-bottom: 10px;
             text-align: center;
@@ -124,7 +116,6 @@
         .card-header h3 {
             font-size: 18px;
             margin: 0;
-            color: #000;
         }
 
         .card-content {
@@ -142,21 +133,15 @@
             margin-right: 15px;
         }
 
-        .card-info {
-            flex-grow: 1;
-        }
-
         .card-info p {
             margin: 5px 0;
-            color: #000;
         }
-
     </style>
 </head>
 <body>
     <div class="header">
         <img src="https://i.imgur.com/naHMr26.png" alt="Logo IPRSM" class="logo">
-        <h2>IPRSM - Formulario Membresia</h2>
+        <h2>IPRSM - Cadastro de Membros</h2>
     </div>
 
     <form id="idForm">
@@ -172,15 +157,12 @@
         <label for="phone">Telefone:</label>
         <input type="tel" id="phone" required placeholder="(XX) XXXXX-XXXX"><br>
 
-        <label for="address">Endereço:</label>
-        <input type="text" id="address" required><br>
-
         <label for="baptismDate">Data de Batismo:</label>
         <input type="date" id="baptismDate" required><br>
 
         <label for="position">Função:</label>
         <select id="position" required>
-            <option value="">Selecione o Função</option>
+            <option value="">Selecione a Função</option>
             <option value="Pastor(a)">Pastor(a)</option>
             <option value="Presbítero(a)">Presbítero(a)</option>
             <option value="Diácono(a)">Diácono(a)</option>
@@ -188,33 +170,24 @@
             <option value="Membro">Membro</option>
         </select><br>
 
-        <label>
-            <input type="checkbox" id="dizimista"> Dizimista
-        </label>
-
-        <label>
-            <input type="checkbox" id="ebenezer"> Ebenezer
-        </label><br>
-
         <label>Foto:</label>
-        <input type="file" accept="image/*" id="fileInput" onchange="loadImageFromFile(event)" capture="camera" required>
+        <input type="file" accept="image/*" id="fileInput" onchange="loadImageFromFile(event)" required>
         <img id="capturedImage" style="display:none;"><br>
 
-        <button type="button" onclick="generateCardAndSave()">Gerar e Salvar via WhatsApp</button>
+        <button type="button" onclick="generateCardAndSave()">Gerar e Baixar Carteirinha</button>
     </form>
 
     <div id="cardPreview" class="card" style="display:none;">
         <div class="card-header">
-            <img src="https://i.imgur.com/naHMr26.png" alt="Logo" />
+            <img src="https://i.imgur.com/naHMr26.png" alt="Logo">
             <h3>IGREJA PRESBITERIANA RENOVADA DE SÃO MIGUEL</h3>
         </div>
         <div class="card-content">
-            <img id="cardImage" src="" alt="Foto" />
+            <img id="cardImage" src="" alt="Foto">
             <div class="card-info">
                 <p><strong>Nome:</strong> <span id="cardName"></span></p>
                 <p><strong>Data de Batismo:</strong> <span id="cardBaptismDate"></span></p>
                 <p><strong>Função:</strong> <span id="cardPosition"></span></p>
-                <p><strong>Status:</strong> <span id="cardStatus"></span></p>
             </div>
         </div>
     </div>
@@ -228,105 +201,30 @@
                 const reader = new FileReader();
                 reader.onload = function (e) {
                     capturedImageData = e.target.result;
-                    const img = document.getElementById("capturedImage");
-                    img.src = capturedImageData;
-                    img.style.display = "block";
+                    document.getElementById("capturedImage").src = capturedImageData;
+                    document.getElementById("capturedImage").style.display = "block";
                 };
                 reader.readAsDataURL(file);
             }
         }
 
-        function formatDate(dateString) {
-            const date = new Date(dateString);
-            const day = String(date.getDate()).padStart(2, '0');
-            const month = String(date.getMonth() + 1).padStart(2, '0');
-            const year = date.getFullYear();
-            return `${day}/${month}/${year}`;
-        }
-
-        function validateCPF(cpf) {
-            // Remove non-numeric characters
-            cpf = cpf.replace(/[^\d]+/g, '');
-
-            if (cpf.length !== 11 || /^(\d)\1+$/.test(cpf)) {
-                return false;
-            }
-
-            let sum = 0;
-            let remainder;
-
-            for (let i = 1; i <= 9; i++) {
-                sum += parseInt(cpf[i - 1]) * (11 - i);
-            }
-            remainder = (sum * 10) % 11;
-            if (remainder === 10 || remainder === 11) {
-                remainder = 0;
-            }
-            if (remainder !== parseInt(cpf[9])) {
-                return false;
-            }
-
-            sum = 0;
-            for (let i = 1; i <= 10; i++) {
-                sum += parseInt(cpf[i - 1]) * (12 - i);
-            }
-            remainder = (sum * 10) % 11;
-            if (remainder === 10 || remainder === 11) {
-                remainder = 0;
-            }
-            if (remainder !== parseInt(cpf[10])) {
-                return false;
-            }
-
-            return true;
-        }
-
         function generateCardAndSave() {
-            const name = document.getElementById('name').value;
-            const position = document.getElementById('position').value;
-            const baptismDate = formatDate(document.getElementById('baptismDate').value);
-            const cpf = document.getElementById('cpf').value;
-
-            // Validação dos campos obrigatórios
-            if (!name || !position || !baptismDate || !cpf) {
-                alert('Todos os campos devem ser preenchidos!');
-                return;
-            }
-
-            // Validação CPF
-            if (!validateCPF(cpf)) {
-                alert('CPF inválido!');
-                return;
-            }
-
-            const dizimista = document.getElementById('dizimista').checked ? "Dizimista" : "";
-            const ebenezer = document.getElementById('ebenezer').checked ? "Ebenezer" : "";
-
-            // Exibindo a carteirinha
-            document.getElementById('cardName').textContent = name;
-            document.getElementById('cardBaptismDate').textContent = baptismDate;
-            document.getElementById('cardPosition').textContent = position;
-            document.getElementById('cardStatus').textContent = `${dizimista} ${ebenezer}`.trim();
+            document.getElementById('cardName').textContent = document.getElementById('name').value;
+            document.getElementById('cardBaptismDate').textContent = document.getElementById('baptismDate').value;
+            document.getElementById('cardPosition').textContent = document.getElementById('position').value;
             if (capturedImageData) {
                 document.getElementById('cardImage').src = capturedImageData;
             }
-
             document.getElementById('cardPreview').style.display = 'flex';
 
-            // Gerar imagem da carteirinha para envio
-            html2canvas(document.getElementById('cardPreview')).then(function (canvas) {
-                const imageData = canvas.toDataURL("image/png");
-
-                // Criar um link de download para a imagem gerada
-                const link = document.createElement('a');
-                link.href = imageData;
-                link.download = 'carteirinha.png';
-
-                // Tentar iniciar o download
-                document.body.appendChild(link);
-                link.click();
-                document.body.removeChild(link);
-            });
+            setTimeout(() => {
+                html2canvas(document.getElementById('cardPreview'), { scale: 2 }).then(canvas => {
+                    const link = document.createElement('a');
+                    link.href = canvas.toDataURL("image/png");
+                    link.download = 'carteirinha.png';
+                    link.click();
+                });
+            }, 500);
         }
     </script>
 </body>
