--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>IPRSM - Formulário Membresia</title>
+    <title>IPRSM - Cadastro de Membros</title>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/html2canvas/0.4.1/html2canvas.min.js"></script>
     <style>
         body {
@@ -155,7 +155,7 @@
 <body>
     <div class="header">
         <img src="https://i.imgur.com/naHMr26.png" alt="Logo IPRSM" class="logo">
-        <h2>IPRSM - Formulário Membresia</h2>
+        <h2>IPRSM - Cadastro de Membros</h2>
     </div>
 
     <form id="idForm">
@@ -205,7 +205,7 @@
     <div id="cardPreview" class="card" style="display:none;">
         <div class="card-header">
             <img src="https://i.imgur.com/naHMr26.png" alt="Logo" />
-            <h3>IGREJA PRESBITERIANA RENOVADA DE SÃO MIGUEL</h3>
+            <h3>IGREJA PRESBITERIANA <br> RENOVADA DE SÃO MIGUEL</h3>
         </div>
         <div class="card-content">
             <img id="cardImage" src="" alt="Foto" />
