--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>IPRSM - Cadastro de Membros</title>
+    <title>IPRSM - Formulário Membresia</title>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/html2canvas/0.4.1/html2canvas.min.js"></script>
     <style>
         body {
@@ -155,7 +155,7 @@
 <body>
     <div class="header">
         <img src="https://i.imgur.com/naHMr26.png" alt="Logo IPRSM" class="logo">
-        <h2>IPRSM - Cadastro de Membros</h2>
+        <h2>IPRSM - Formulário Membresia</h2>
     </div>
 
     <form id="idForm">
@@ -198,14 +198,12 @@
         <label>Foto:</label>
         <input type="file" accept="image/*" id="fileInput" onchange="loadImageFromFile(event)" capture="camera" required>
         <img id="capturedImage" style="display:none;"><br>
-
-        <button type="button" onclick="generateCardAndSendToWhatsApp()">Gerar e Enviar para WhatsApp</button>
     </form>
 
     <div id="cardPreview" class="card" style="display:none;">
         <div class="card-header">
             <img src="https://i.imgur.com/naHMr26.png" alt="Logo" />
-            <h3>IGREJA PRESBITERIANA <br> RENOVADA DE SÃO MIGUEL</h3>
+            <h3>IGREJA PRESBITERIANA RENOVADA DE SÃO MIGUEL</h3>
         </div>
         <div class="card-content">
             <img id="cardImage" src="" alt="Foto" />
@@ -221,6 +219,7 @@
     <script>
         let capturedImageData = null;
 
+        // Função para carregar a imagem a partir do arquivo
         function loadImageFromFile(event) {
             const file = event.target.files[0];
             if (file) {
@@ -230,11 +229,13 @@
                     const img = document.getElementById("capturedImage");
                     img.src = capturedImageData;
                     img.style.display = "block";
+                    checkAllFields(); // Verifica os campos após carregar a imagem
                 };
                 reader.readAsDataURL(file);
             }
         }
 
+        // Formata a data para o formato dd/mm/aaaa
         function formatDate(dateString) {
             const date = new Date(dateString);
             const day = String(date.getDate()).padStart(2, '0');
@@ -243,6 +244,7 @@
             return `${day}/${month}/${year}`;
         }
 
+        // Valida o CPF
         function validateCPF(cpf) {
             cpf = cpf.replace(/[^\d]+/g, '');
 
@@ -279,21 +281,24 @@
             return true;
         }
 
-        function generateCardAndSendToWhatsApp() {
+        // Verifica se todos os campos estão preenchidos
+        function checkAllFields() {
+            const name = document.getElementById('name').value;
+            const position = document.getElementById('position').value;
+            const baptismDate = document.getElementById('baptismDate').value;
+            const cpf = document.getElementById('cpf').value;
+
+            if (name && position && baptismDate && cpf && capturedImageData && validateCPF(cpf)) {
+                generateCard(); // Gera a carteirinha se todos os campos estiverem preenchidos
+            }
+        }
+
+        // Gera a carteirinha
+        function generateCard() {
             const name = document.getElementById('name').value;
             const position = document.getElementById('position').value;
             const baptismDate = formatDate(document.getElementById('baptismDate').value);
             const cpf = document.getElementById('cpf').value;
-
-            if (!name || !position || !baptismDate || !cpf) {
-                alert('Todos os campos devem ser preenchidos!');
-                return;
-            }
-
-            if (!validateCPF(cpf)) {
-                alert('CPF inválido!');
-                return;
-            }
 
             const dizimista = document.getElementById('dizimista').checked ? "Dizimista" : "";
             const ebenezer = document.getElementById('ebenezer').checked ? "Ebenezer" : "";
@@ -307,15 +312,6 @@
             }
 
             document.getElementById('cardPreview').style.display = 'flex';
-
-            const phoneNumber = "+5511979654420";
-            const message = `Segue carteirinha para análise. Meu nome é ${name} e minha função é ${position}.`;
-
-            // Formata a mensagem corretamente
-            const whatsappUrl = `https://wa.me/${phoneNumber}?text=${encodeURIComponent(message)}`;
-
-            // Redireciona para a conversa no WhatsApp
-            window.open(whatsappUrl, '_blank');
         }
     </script>
 </body>
