--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>IPRSM - Formulário Membresia</title>
+    <title>IPRSM - Membresia</title>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/html2canvas/0.4.1/html2canvas.min.js"></script>
     <style>
         body {
@@ -155,7 +155,7 @@
 <body>
     <div class="header">
         <img src="https://i.imgur.com/naHMr26.png" alt="Logo IPRSM" class="logo">
-        <h2>IPRSM - Formulário Membresia</h2>
+        <h2>IPRSM - Cadastro de Membros</h2>
     </div>
 
     <form id="idForm">
@@ -214,6 +214,7 @@
                 <p><strong>Status:</strong> <span id="cardStatus"></span></p>
             </div>
         </div>
+        <button id="downloadButton" onclick="sendToWhatsApp()">Baixar e Enviar no WhatsApp</button>
     </div>
 
     <script>
@@ -312,6 +313,16 @@
             }
 
             document.getElementById('cardPreview').style.display = 'flex';
+        }
+
+        // Enviar mensagem para o WhatsApp
+        function sendToWhatsApp() {
+            const name = document.getElementById('name').value;
+            const position = document.getElementById('position').value;
+            const message = `Segue carteirinha para análise:\nNome: ${name}\nFunção: ${position}`;
+            const phoneNumber = '+5511979654420';
+            const whatsappURL = `https://api.whatsapp.com/send?phone=${phoneNumber}&text=${encodeURIComponent(message)}`;
+            window.open(whatsappURL, '_blank');
         }
     </script>
 </body>
