--- a/index.html
+++ b/index.html
@@ -171,6 +171,10 @@
         <label for="phone">Telefone:</label>
         <input type="tel" id="phone" required placeholder="(XX) XXXXX-XXXX"><br>
 
+        <label for="cep">CEP:</label>
+        <input type="text" id="cep" placeholder="XXXXX-XXX" maxlength="10" required>
+        <button type="button" onclick="fetchAddress()">Buscar Endereço</button><br>
+
         <label for="address">Endereço:</label>
         <input type="text" id="address" required><br>
 
@@ -313,6 +317,31 @@
             }
 
             document.getElementById('cardPreview').style.display = 'flex';
+        }
+
+        // Função para buscar endereço pelo CEP
+        async function fetchAddress() {
+            const cep = document.getElementById('cep').value.replace(/\D/g, '');
+            if (cep.length !== 8) {
+                alert('CEP inválido. Deve ter 8 dígitos.');
+                return;
+            }
+
+            try {
+                const response = await fetch(`https://viacep.com.br/ws/${cep}/json/`);
+                const data = await response.json();
+
+                if (data.erro) {
+                    alert('CEP não encontrado.');
+                    return;
+                }
+
+                // Preencher os campos de endereço
+                document.getElementById('address').value = `${data.logradouro}, ${data.bairro}, ${data.localidade} - ${data.uf}`;
+                checkAllFields(); // Verifica os campos após preencher o endereço
+            } catch (error) {
+                alert('Erro ao buscar endereço. Tente novamente.');
+            }
         }
 
         // Enviar mensagem para o WhatsApp
