--- a/index.html
+++ b/index.html
@@ -1,54 +1,358 @@
-<script>
-    async function sendToTrello() {
-        const name = document.getElementById('name').value;
-        const position = document.getElementById('position').value;
-        const baptismDate = formatDate(document.getElementById('baptismDate').value);
-        const cpf = document.getElementById('cpf').value;
-        const phone = document.getElementById('phone').value;
-        const address = document.getElementById('address').value;
-        const dizimista = document.getElementById('dizimista').checked ? "Sim" : "Não";
-        const ebenezer = document.getElementById('ebenezer').checked ? "Sim" : "Não";
-        
-        const apiKey = 580b929cd3fd23399eb5a3cbeac8e3df;
-        const token = ATTA1a5ed79744840ebea79fcedb6c88ead3bddca932a9d5ab5191dbb8722dfd9083E14CC719;
-        const listId = 67891789508c1cc4f9ab7d59;
-
-        const cardData = {
-            name: `Cadastro: ${name}`,
-            desc: `**Nome:** ${name}\n**CPF:** ${cpf}\n**Telefone:** ${phone}\n**Endereço:** ${address}\n**Data de Batismo:** ${baptismDate}\n**Função:** ${position}\n**Dizimista:** ${dizimista}\n**Ebenezer:** ${ebenezer}`,
-            idList: listId,
-            key: apiKey,
-            token: token
-        };
-
-        try {
-            const response = await fetch('https://api.trello.com/1/cards', {
-                method: 'POST',
-                headers: { 'Content-Type': 'application/json' },
-                body: JSON.stringify(cardData)
-            });
-
-            if (response.ok) {
-                alert('Cadastro enviado para o Trello com sucesso!');
-            } else {
-                alert('Erro ao enviar cadastro para o Trello.');
-            }
-        } catch (error) {
-            alert('Erro na comunicação com o Trello. Verifique sua conexão.');
+<!DOCTYPE html>
+<html lang="pt">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>IPRSM - Membresia</title>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/html2canvas/0.4.1/html2canvas.min.js"></script>
+    <style>
+        body {
+            font-family: 'Roboto', sans-serif;
+            padding: 20px;
+            margin: 0;
+            background-color: #121212;
+            color: #f1f1f1;
         }
-    }
 
-    document.getElementById('downloadButton').addEventListener('click', async () => {
-        await sendToTrello();
-        sendToWhatsApp();
-    });
+        .header {
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            margin-bottom: 30px;
+        }
 
-    function sendToWhatsApp() {
-        const name = document.getElementById('name').value;
-        const position = document.getElementById('position').value;
-        const message = `Segue carteirinha para análise:\nNome: ${name}\nFunção: ${position}`;
-        const phoneNumber = '+5511979654420';
-        const whatsappURL = `https://api.whatsapp.com/send?phone=${phoneNumber}&text=${encodeURIComponent(message)}`;
-        window.open(whatsappURL, '_blank');
-    }
-</script>
+        .logo {
+            width: 50px;
+            margin-right: 10px;
+        }
+
+        h2 {
+            color: #f1f1f1;
+            margin: 0;
+        }
+
+        form {
+            display: flex;
+            flex-direction: column;
+            align-items: stretch;
+            max-width: 700px;
+            margin: auto;
+            background: #1e1e1e;
+            padding: 30px;
+            border-radius: 10px;
+            box-shadow: 0 5px 15px rgba(0, 0, 0, 0.3);
+        }
+
+        label {
+            margin-bottom: 8px;
+            color: #bdc3c7;
+        }
+
+        input, select {
+            padding: 12px;
+            border: 2px solid #555;
+            border-radius: 8px;
+            background: #333;
+            font-size: 14px;
+            color: #f1f1f1;
+        }
+
+        input:focus, select:focus {
+            border-color: #3498db;
+            outline: none;
+        }
+
+        button {
+            cursor: pointer;
+            background-color: #3498db;
+            color: white;
+            border: none;
+            border-radius: 8px;
+            padding: 12px;
+            font-size: 16px;
+            transition: background-color 0.3s ease;
+            margin-top: 20px;
+        }
+
+        button:hover {
+            background-color: #2980b9;
+        }
+
+        #capturedImage {
+            max-width: 100%;
+            margin-top: 10px;
+            border-radius: 8px;
+            box-shadow: 0 2px 6px rgba(0, 0, 0, 0.4);
+        }
+
+        @media (max-width: 600px) {
+            form {
+                width: 90%;
+            }
+        }
+
+        .card {
+            display: flex;
+            align-items: center;
+            justify-content: flex-start;
+            width: 600px;
+            height: 220px;
+            background: #fff;
+            padding: 15px;
+            border-radius: 10px; /* Bordas arredondadas */
+            color: #000;
+            box-shadow: 0 5px 15px rgba(0, 0, 0, 0.3);
+            border: 5px solid #000;
+            flex-direction: column;
+        }
+
+        .card-header {
+            display: flex;
+            align-items: center;
+            justify-content: flex-start;
+            width: 100%;
+            margin-bottom: 10px;
+            text-align: center;
+        }
+
+        .card-header img {
+            width: 50px;
+            height: 50px;
+            margin-right: 10px;
+        }
+
+        .card-header h3 {
+            font-size: 18px;
+            margin: 0;
+            color: #000;
+        }
+
+        .card-content {
+            display: flex;
+            align-items: center;
+            width: 100%;
+            margin-top: 10px;
+        }
+
+        .card img {
+            border-radius: 8px;
+            width: 100px;
+            height: 100px;
+            object-fit: cover;
+            margin-right: 15px;
+        }
+
+        .card-info {
+            flex-grow: 1;
+        }
+
+        .card-info p {
+            margin: 5px 0;
+            color: #000;
+        }
+    </style>
+</head>
+<body>
+    <div class="header">
+        <img src="https://i.imgur.com/naHMr26.png" alt="Logo IPRSM" class="logo">
+        <h2>IPRSM - Cadastro de Membros</h2>
+    </div>
+
+    <form id="idForm">
+        <label for="name">Nome:</label>
+        <input type="text" id="name" required><br>
+
+        <label for="dob">Data de Nascimento:</label>
+        <input type="date" id="dob" required><br>
+
+        <label for="cpf">CPF:</label>
+        <input type="text" id="cpf" required placeholder="XXX.XXX.XXX-XX"><br>
+
+        <label for="phone">Telefone:</label>
+        <input type="tel" id="phone" required placeholder="(XX) XXXXX-XXXX"><br>
+
+        <label for="cep">CEP:</label>
+        <input type="text" id="cep" placeholder="XXXXX-XXX" maxlength="10" required>
+        <button type="button" onclick="fetchAddress()">Buscar Endereço</button><br>
+
+        <label for="address">Endereço:</label>
+        <input type="text" id="address" required><br>
+
+        <label for="baptismDate">Data de Batismo:</label>
+        <input type="date" id="baptismDate" required><br>
+
+        <label for="position">Função:</label>
+        <select id="position" required>
+            <option value="">Selecione a Função</option>
+            <option value="Pastor(a)">Pastor(a)</option>
+            <option value="Presbítero(a)">Presbítero(a)</option>
+            <option value="Diácono(a)">Diácono(a)</option>
+            <option value="Missionário(a)">Missionário(a)</option>
+            <option value="Membro">Membro</option>
+        </select><br>
+
+        <label>
+            <input type="checkbox" id="dizimista"> Dizimista
+        </label>
+
+        <label>
+            <input type="checkbox" id="ebenezer"> Ebenezer
+        </label><br>
+
+        <label>Foto:</label>
+        <input type="file" accept="image/*" id="fileInput" onchange="loadImageFromFile(event)" capture="camera" required>
+        <img id="capturedImage" style="display:none;"><br>
+    </form>
+
+    <div id="cardPreview" class="card" style="display:none;">
+        <div class="card-header">
+            <img src="https://i.imgur.com/naHMr26.png" alt="Logo" />
+            <h3>IGREJA PRESBITERIANA RENOVADA DE SÃO MIGUEL</h3>
+        </div>
+        <div class="card-content">
+            <img id="cardImage" src="" alt="Foto" />
+            <div class="card-info">
+                <p><strong>Nome:</strong> <span id="cardName"></span></p>
+                <p><strong>Data de Batismo:</strong> <span id="cardBaptismDate"></span></p>
+                <p><strong>Função:</strong> <span id="cardPosition"></span></p>
+                <p><strong>Status:</strong> <span id="cardStatus"></span></p>
+            </div>
+        </div>
+        <button id="downloadButton" onclick="sendToWhatsApp()">Baixar e Enviar no WhatsApp</button>
+    </div>
+
+    <script>
+        let capturedImageData = null;
+
+        // Função para carregar a imagem a partir do arquivo
+        function loadImageFromFile(event) {
+            const file = event.target.files[0];
+            if (file) {
+                const reader = new FileReader();
+                reader.onload = function (e) {
+                    capturedImageData = e.target.result;
+                    const img = document.getElementById("capturedImage");
+                    img.src = capturedImageData;
+                    img.style.display = "block";
+                    checkAllFields(); // Verifica os campos após carregar a imagem
+                };
+                reader.readAsDataURL(file);
+            }
+        }
+
+        // Formata a data para o formato dd/mm/aaaa
+        function formatDate(dateString) {
+            const date = new Date(dateString);
+            const day = String(date.getDate()).padStart(2, '0');
+            const month = String(date.getMonth() + 1).padStart(2, '0');
+            const year = date.getFullYear();
+            return `${day}/${month}/${year}`;
+        }
+
+        // Valida o CPF
+        function validateCPF(cpf) {
+            cpf = cpf.replace(/[^\d]+/g, '');
+
+            if (cpf.length !== 11 || /^(\d)\1+$/.test(cpf)) {
+                return false;
+            }
+
+            let sum = 0;
+            let remainder;
+
+            for (let i = 1; i <= 9; i++) {
+                sum += parseInt(cpf[i - 1]) * (11 - i);
+            }
+            remainder = (sum * 10) % 11;
+            if (remainder === 10 || remainder === 11) {
+                remainder = 0;
+            }
+            if (remainder !== parseInt(cpf[9])) {
+                return false;
+            }
+
+            sum = 0;
+            for (let i = 1; i <= 10; i++) {
+                sum += parseInt(cpf[i - 1]) * (12 - i);
+            }
+            remainder = (sum * 10) % 11;
+            if (remainder === 10 || remainder === 11) {
+                remainder = 0;
+            }
+            if (remainder !== parseInt(cpf[10])) {
+                return false;
+            }
+
+            return true;
+        }
+
+        // Verifica se todos os campos estão preenchidos
+        function checkAllFields() {
+            const name = document.getElementById('name').value;
+            const position = document.getElementById('position').value;
+            const baptismDate = document.getElementById('baptismDate').value;
+            const cpf = document.getElementById('cpf').value;
+
+            if (name && position && baptismDate && cpf && capturedImageData && validateCPF(cpf)) {
+                generateCard(); // Gera a carteirinha se todos os campos estiverem preenchidos
+            }
+        }
+
+        // Gera a carteirinha
+        function generateCard() {
+            const name = document.getElementById('name').value;
+            const position = document.getElementById('position').value;
+            const baptismDate = formatDate(document.getElementById('baptismDate').value);
+            const cpf = document.getElementById('cpf').value;
+
+            const dizimista = document.getElementById('dizimista').checked ? "Dizimista" : "";
+            const ebenezer = document.getElementById('ebenezer').checked ? "Ebenezer" : "";
+
+            document.getElementById('cardName').textContent = name;
+            document.getElementById('cardBaptismDate').textContent = baptismDate;
+            document.getElementById('cardPosition').textContent = position;
+            document.getElementById('cardStatus').textContent = `${dizimista} ${ebenezer}`.trim();
+            if (capturedImageData) {
+                document.getElementById('cardImage').src = capturedImageData;
+            }
+
+            document.getElementById('cardPreview').style.display = 'flex';
+        }
+
+        // Função para buscar endereço pelo CEP
+        async function fetchAddress() {
+            const cep = document.getElementById('cep').value.replace(/\D/g, '');
+            if (cep.length !== 8) {
+                alert('CEP inválido. Deve ter 8 dígitos.');
+                return;
+            }
+
+            try {
+                const response = await fetch(`https://viacep.com.br/ws/${cep}/json/`);
+                const data = await response.json();
+
+                if (data.erro) {
+                    alert('CEP não encontrado.');
+                    return;
+                }
+
+                // Preencher os campos de endereço
+                document.getElementById('address').value = `${data.logradouro}, ${data.bairro}, ${data.localidade} - ${data.uf}`;
+                checkAllFields(); // Verifica os campos após preencher o endereço
+            } catch (error) {
+                alert('Erro ao buscar endereço. Tente novamente.');
+            }
+        }
+
+        // Enviar mensagem para o WhatsApp
+        function sendToWhatsApp() {
+            const name = document.getElementById('name').value;
+            const position = document.getElementById('position').value;
+            const message = `Segue carteirinha para análise:\nNome: ${name}\nFunção: ${position}`;
+            const phoneNumber = '+5511979654420';
+            const whatsappURL = `https://api.whatsapp.com/send?phone=${phoneNumber}&text=${encodeURIComponent(message)}`;
+            window.open(whatsappURL, '_blank');
+        }
+    </script>
+</body>
+</html>
