--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
 </head>
 <body>
     <div class="header">
-        <img src="https://i.imgur.com/AqZB8Ei.jpeg" alt="Logo IPRSM" class="logo">
+        <img src="https://i.imgur.com/naHMr26.png" alt="Logo IPRSM" class="logo">
         <h2>IPRSM - Cadastro de Membros</h2>
     </div>
 
