--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
         <input type="text" id="regNumber" readonly required>
 
         <label for="fileInput">Foto:</label>
-        <input type="file" accept="image/*" id="fileInput" capture="camera" onchange="previewImage(event)">
+        <input type="file" accept="image/*" id="fileInput" onchange="previewImage(event)">
         <img id="preview">
 
         <!-- Novos Campos de Caixa de Seleção -->
